from https://github.com/sergiokopplin/indigo

--- a/index.html
+++ b/index.html
@@ -1,22 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Install OpenCV 3.3 on Ubuntu 16.04 LTS with CUDA 9.0</h1>
-<p>Instructions: https://github.com/BVLC/caffe/wiki/OpenCV-3.3-Installation-Guide-on-Ubuntu-16.04.</p>
-<p>Potential problems during installing</p>
-<p>https://stackoverflow.com/questions/46584000/cmake-error-variables-are-set-to-notfound</p>
-<p>https://stackoverflow.com/questions/46884682/error-in-building-opencv-with-ffmpeg</p>
-<p>Install ffmpeg:</p> 
-<p>        tar xvf ffmpeg-3.1.11.tar.bz2
-        cd ffmpeg-3.1.11
-        sudo apt-get install yasm
-        ./configure --host-cppflags=-fPIC --host-cflags=-fPIC --enable-shared
-        make
-        sudo make install
-        --------------------- 
-        作者：二十马赫 
-        来源：CSDN 
-        原文：https://blog.csdn.net/qq_24878901/article/details/82382895 
-        版权声明：本文为博主原创文章，转载请附上博文链接！</p>
-</body>
-</html>
+---
+layout: page
+title: Home
+---
